--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "..."
+    "test": "...",
+    "update-i18n": "node scripts/download_from_excel.mjs",
+    "update-i18n-inverse": "node scripts/js_to_csv.mjs"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
+    "exceljs": "^4.1.1",
     "vite": "^7.3.1"
   }
 }
