--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
+    "dotenv": "^17.3.1",
     "exceljs": "^4.1.1",
     "vite": "^7.3.1"
   }
